force-app/main/default/objects/Invoice_Object__c/Invoice_Object__c.object-meta.xml
<CustomObject>
    <label>Invoice Object</label>
    <nameField>
        <label>Invoice Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>