force-app/main/default/objects/Invoice_Object__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Objects</relationshipLabel>
    <relationshipName>Invoice_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>